Added Firebase authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Base app</string>
+    <string name="app_name">Fortmart</string>
     <string name="title_first">First</string>
     <string name="title_second">Second</string>
     <string name="title_third">Third</string>
