--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">Fortmart</string>
-    <string name="title_first">First</string>
-    <string name="title_second">Second</string>
-    <string name="title_third">Third</string>
+    <string name="title_home">Stores</string>
+    <string name="title_ad">Ads</string>
+    <string name="title_settings">Settings</string>
     <string name="title_four">Fourth</string>
     <string name="title_detail_screen">Detail screen</string>
     <string name="title_action_screen">Action screen</string>
-    <string name="title_login">Detail screen</string>
-    <string name="title_otp">Action screen</string>
+    <string name="title_language">Language</string>
+    <string name="title_login">Login</string>
     <string name="label_logout">Logout</string>
     <string name="tab_title_pending">Pending</string>
     <string name="tab_title_accepted">Accepted</string>
