Added UI for Stores & Store list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_ad">Ads</string>
     <string name="title_settings">Settings</string>
     <string name="title_four">Fourth</string>
-    <string name="title_detail_screen">Detail screen</string>
+    <string name="title_detail_screen">Listing stores near you…</string>
     <string name="title_action_screen">Action screen</string>
     <string name="title_language">Language</string>
     <string name="title_login">Login</string>
