--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Fortmart</string>
-    <string name="title_home">Stores</string>
-    <string name="title_ad">Ads</string>
+    <string name="title_items">Items</string>
+    <string name="title_orders">Orders</string>
     <string name="title_settings">Settings</string>
     <string name="title_four">Fourth</string>
     <string name="title_detail_screen">Listing stores near you…</string>
