--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="label_resend_otp_enabled">Resend OTP</string>
     <string name="country_code">+91</string>
     <string name="currency">₹</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDznyTDhZgpH_hl8EL60z6bPOkcrKDTkrc</string>
 </resources>
